tests/type-errors/fun_error_view_write.arl
archetype fun_error_view_write

variable res : nat = 0

function f() : nat {
  res := 2;
  return 0
}

view my_view() : nat {
  return f()
}
